[package]
name = "random_generator"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# crate-type = ["cdylib"]

[dependencies]
criterion = {version = "0.5", optional = true}
rand = {version = "0.8", features = ["small_rng"], default-features = false, optional = true}

[dev-dependencies]

[features]
benchmarking = ["criterion", "rand"]

[[bench]]
name = "main_bench"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
